# UITLegalRAG

./: .env.example  .gitignore  MASTERPLAN.md  README.md  package-lock.json  pyproject.toml  requirements.txt
api/: dependencies.py  main.py
api/routers/: health.py  query.py
api/schemas/: request.py  response.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
notebook/: Classifier document.ipynb  EDA.ipynb  Fine tune embedding.ipynb  rag-legal-uit.ipynb
scripts/: index_data.py  setup_vncorenlp.py  train_svm.py
src/classification/: predictor.py  svm_classifier.py
src/config/: settings.py
src/generation/: llm_generator.py
src/indexing/: bm25_indexer.py  chroma_indexer.py  data_loader.py
src/preprocessing/: stopword_remover.py  vncore_segmenter.py
src/retrieval/: bm25_retriever.py  chromadb_retriever.py  cross_encoder_reranker.py  embedding_function.py  hybrid_retriever.py
