[project]
name = "vietnamese-legal-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "python-dotenv==1.*",
    "chromadb==0.5.*",
    "sentence-transformers==3.*",
    "rank-bm25==0.2.*",
    "py-vncorenlp==0.1.*",
    "scikit-learn==1.5.*",
    "numpy==1.*",
    "pandas==2.*",
    "torch>=2.0",
    "openai==1.*",
    "rouge-score==0.1.*",
    "bert-score==0.3.*",
    "nltk==3.*"
]
